--- a/index.html
+++ b/index.html
@@ -606,28 +606,28 @@
                             <div class="wpb_column vc_column_container vc_col-sm-12 vc_col-lg-offset-1 vc_col-lg-5 vc_col-md-6">
                                 <div class="vc_column-inner ">
                                     <div class="wpb_wrapper">
-                                        <div class="countdown-box text-center ">
-                                            <div class="token-countdown d-flex align-content-stretch"
-                                                 data-date="2018/05/16">
-                                                <div class="col"><span class="countdown-time">16</span><span
-                                                        class="countdown-text">Days</span></div>
-                                                <div class="col"><span class="countdown-time">00</span><span
-                                                        class="countdown-text">Hours</span></div>
-                                                <div class="col"><span class="countdown-time">00</span><span
-                                                        class="countdown-text">Minutes</span></div>
-                                                <div class="col"><span
-                                                        class="countdown-time countdown-time-last">00</span><span
-                                                        class="countdown-text">Seconds</span></div>
-                                            </div>
-                                            <a class="btn btn-alt btn-sm" href="https://discord.gg/yMTRTsj"
-                                               target="_self">Buy Coins</a>
-                                            <ul class="icon-list">
-                                                <li><em class="fa fa-btc" aria-hidden="true"></em></li>
-                                                <!--<li><em class="fa fa-krw" aria-hidden="true"></em></li>-->
-                                                <!--<li><em class="fa fa-cc-visa" aria-hidden="true"></em></li>-->
-                                                <!--<li><em class="fa fa-cc-mastercard" aria-hidden="true"></em></li>-->
-                                            </ul>
-                                        </div>
+                                        <!--<div class="countdown-box text-center ">-->
+                                            <!--<div class="token-countdown d-flex align-content-stretch"-->
+                                                 <!--data-date="2018/05/16">-->
+                                                <!--<div class="col"><span class="countdown-time">16</span><span-->
+                                                        <!--class="countdown-text">Days</span></div>-->
+                                                <!--<div class="col"><span class="countdown-time">00</span><span-->
+                                                        <!--class="countdown-text">Hours</span></div>-->
+                                                <!--<div class="col"><span class="countdown-time">00</span><span-->
+                                                        <!--class="countdown-text">Minutes</span></div>-->
+                                                <!--<div class="col"><span-->
+                                                        <!--class="countdown-time countdown-time-last">00</span><span-->
+                                                        <!--class="countdown-text">Seconds</span></div>-->
+                                            <!--</div>-->
+                                            <!--<a class="btn btn-alt btn-sm" href="https://discord.gg/yMTRTsj"-->
+                                               <!--target="_self">Buy Coins</a>-->
+                                            <!--<ul class="icon-list">-->
+                                                <!--<li><em class="fa fa-btc" aria-hidden="true"></em></li>-->
+                                                <!--&lt;!&ndash;<li><em class="fa fa-krw" aria-hidden="true"></em></li>&ndash;&gt;-->
+                                                <!--&lt;!&ndash;<li><em class="fa fa-cc-visa" aria-hidden="true"></em></li>&ndash;&gt;-->
+                                                <!--&lt;!&ndash;<li><em class="fa fa-cc-mastercard" aria-hidden="true"></em></li>&ndash;&gt;-->
+                                            <!--</ul>-->
+                                        <!--</div>-->
 
                                     </div>
                                 </div>
@@ -1697,7 +1697,7 @@
                     <li><a href="#"><em class="fa fa-medium" aria-hidden="true"></em></a></li>
                 </ul>
                 <span class="copyright-text">
-                    Copyright © 2018, ICOs Crypto Theme Made By <a href="http://oceanthemes.net/" target="_blank">OceanThemes</a> &amp; Handcrafted by iO.<span>All trademarks and copyrights belong to their respective owners.</span>                        </span>
+                    Copyright © 2018, AceD Coin Made By AceD Developers<span>All trademarks and copyrights belong to their respective owners</span>                        </span>
             </div>
         </div>
     </div>
