--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                                             <div class="wpb_text_column wpb_content_element  vc_custom_1520828093008">
                                                 <div class="wpb_wrapper" style="text-align: center; max-width: 777px; margin: auto;">
                                                     <h2>Early Supporters Program is now LIVE</h2>
-                                                    <p class="lead">Join AceD Early supporters program to get early
+                                                    <p>Join AceD Early supporters program to get early
                                                         access to Masternodes and Wallets. The raised funds are to
                                                         be spent on Team Building, Platform Maintenance, Marketing,
                                                         and Development. Please join our <a
