--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
          class="vc_rows wpb_row vc_row-fluid section section-pad section-bg-blend nopb vc_row-o-equal-height vc_row-o-content-middle vc_row-flex">
     <div class="container">
         <div class="row">
-            <div class="res-m-btm wpb_column vc_column_container vc_col-sm-5 vc_col-sm-offset-1 vc_col-xs-12">
+            <div class="res-m-btm wpb_column vc_column_container vc_col-sm-6   vc_col-xs-12">
                 <div class="vc_column-inner ">
                     <div class="wpb_wrapper">
                         <div class="wpb_single_image wpb_content_element vc_align_center">
@@ -368,7 +368,7 @@
         class="vc_rows wpb_row vc_row-fluid section-pad no-pb section-bg-alt vc_row-o-equal-height vc_row-o-content-middle vc_row-flex">
     <div class="container">
         <div class="row">
-            <div class="res-m-btm wpb_column vc_column_container vc_col-sm-5">
+            <div class="res-m-btm wpb_column vc_column_container vc_col-sm-6">
                 <div class="vc_column-inner ">
                     <div class="wpb_wrapper">
                         <div class="wpb_single_image wpb_content_element vc_align_center">
@@ -387,7 +387,7 @@
                     </div>
                 </div>
             </div>
-            <div class="wpb_column vc_column_container vc_col-sm-6 vc_col-sm-offset-1">
+            <div class="wpb_column vc_column_container vc_col-sm-6  ">
                 <div class="vc_column-inner ">
                     <div class="wpb_wrapper">
                         <div class="wpb_text_column wpb_content_element  text-block">
@@ -627,6 +627,7 @@
                                 </div>
                             </div>
                         </div>
+                        <div style="text-align: center;margin-top: 7%;"><a class="btn btn-alt btn-sm" href="https://discord.gg/yMTRTsj" target="_self">Buy Coins</a></div>
 
                     </div>
                 </div>
