--- a/index.html
+++ b/index.html
@@ -713,14 +713,14 @@
                                             <div class="team-info">
                                                 <h5 class="team-name">Tom C</h5>
                                                 <span class="team-title">Technical Lead @Crypto Sharks</span>
-                                                <ul class="team-social">
-                                                    <li><a href="#"><em class="fa fa-facebook"
-                                                                        aria-hidden="true"></em></a></li>
-                                                    <li><a href="#"><em class="fa fa-linkedin"
-                                                                        aria-hidden="true"></em></a></li>
-                                                    <li><a href="https://twitter.com/AcedCoin"><em
-                                                            class="fa fa-twitter" aria-hidden="true"></em></a></li>
-                                                </ul>
+                                                <!--<ul class="team-social">-->
+                                                    <!--<li><a href="#"><em class="fa fa-facebook"-->
+                                                                        <!--aria-hidden="true"></em></a></li>-->
+                                                    <!--<li><a href="#"><em class="fa fa-linkedin"-->
+                                                                        <!--aria-hidden="true"></em></a></li>-->
+                                                    <!--<li><a href="https://twitter.com/AcedCoin"><em-->
+                                                            <!--class="fa fa-twitter" aria-hidden="true"></em></a></li>-->
+                                                <!--</ul>-->
                                             </div>
                                         </div>
 
@@ -738,14 +738,6 @@
                                             <div class="team-info">
                                                 <h5 class="team-name">Anthony Kaz</h5>
                                                 <span class="team-title">Community Manager @Kaz</span>
-                                                <ul class="team-social">
-                                                    <li><a href="#"><em class="fa fa-facebook"
-                                                                        aria-hidden="true"></em></a></li>
-                                                    <li><a href="#"><em class="fa fa-linkedin"
-                                                                        aria-hidden="true"></em></a></li>
-                                                    <li><a href="https://twitter.com/AcedCoin"><em
-                                                            class="fa fa-twitter" aria-hidden="true"></em></a></li>
-                                                </ul>
                                             </div>
                                         </div>
 
@@ -763,14 +755,6 @@
                                             <div class="team-info">
                                                 <h5 class="team-name">Fahim</h5>
                                                 <span class="team-title">Advisor @black_panther</span>
-                                                <ul class="team-social">
-                                                    <li><a href="#"><em class="fa fa-facebook"
-                                                                        aria-hidden="true"></em></a></li>
-                                                    <li><a href="#"><em class="fa fa-linkedin"
-                                                                        aria-hidden="true"></em></a></li>
-                                                    <li><a href="https://twitter.com/AcedCoin"><em
-                                                            class="fa fa-twitter" aria-hidden="true"></em></a></li>
-                                                </ul>
                                             </div>
                                         </div>
 
@@ -788,14 +772,6 @@
                                             <div class="team-info">
                                                 <h5 class="team-name">Lakhan Mohan</h5>
                                                 <span class="team-title">Advisor @willie</span>
-                                                <ul class="team-social">
-                                                    <li><a href="#"><em class="fa fa-facebook"
-                                                                        aria-hidden="true"></em></a></li>
-                                                    <li><a href="#"><em class="fa fa-linkedin"
-                                                                        aria-hidden="true"></em></a></li>
-                                                    <li><a href="https://twitter.com/AcedCoin"><em
-                                                            class="fa fa-twitter" aria-hidden="true"></em></a></li>
-                                                </ul>
                                             </div>
                                         </div>
 
@@ -813,14 +789,6 @@
                                             <div class="team-info">
                                                 <h5 class="team-name">H.Alshimary</h5>
                                                 <span class="team-title">Advisor @cryptocoinking</span>
-                                                <ul class="team-social">
-                                                    <li><a href="#"><em class="fa fa-facebook"
-                                                                        aria-hidden="true"></em></a></li>
-                                                    <li><a href="#"><em class="fa fa-linkedin"
-                                                                        aria-hidden="true"></em></a></li>
-                                                    <li><a href="https://twitter.com/AcedCoin"><em
-                                                            class="fa fa-twitter" aria-hidden="true"></em></a></li>
-                                                </ul>
                                             </div>
                                         </div>
 
@@ -838,14 +806,6 @@
                                             <div class="team-info">
                                                 <h5 class="team-name">Cody McKenna</h5>
                                                 <span class="team-title">Marketing & Community Management @Crypto-Mick</span>
-                                                <ul class="team-social">
-                                                    <li><a href="#"><em class="fa fa-facebook"
-                                                                        aria-hidden="true"></em></a></li>
-                                                    <li><a href="#"><em class="fa fa-linkedin"
-                                                                        aria-hidden="true"></em></a></li>
-                                                    <li><a href="https://twitter.com/AcedCoin"><em
-                                                            class="fa fa-twitter" aria-hidden="true"></em></a></li>
-                                                </ul>
                                             </div>
                                         </div>
 
