--- a/index.html
+++ b/index.html
@@ -647,12 +647,8 @@
                                 <div class="vc_column-inner ">
                                     <div class="wpb_wrapper">
                                         <div class="section-head text-center">
-                                            <h2 class="section-title">
-                                                OUR ROADMAP <span>ROADMAP</span></h2>
+                                            <h2 class="section-title">OUR ROADMAP</h2>
                                         </div>
-
-                                        <div class="vc_empty_space" style="height: 50px"><span
-                                                class="vc_empty_space_inner"></span></div>
                                     </div>
                                 </div>
                             </div>
