--- a/index.html
+++ b/index.html
@@ -198,10 +198,18 @@
     }</style>
 </noscript>
 <link rel="stylesheet" href="css(1)" media="all">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" />
 </head>
 
 <body class="home page-template page-template-page-templates page-template-template-onepage page-template-page-templatestemplate-onepage-php page page-id-29 wpb-js-composer js-comp-ver-5.4.5 vc_responsive icos-theme-ver-1.0 wordpress-version-4.9.5  no-touch loaded"
   data-spy="scroll" data-target="#mainnav" data-offset="80">
+<a id="popuplink" href="#inline" style="display:none;"></a>
+<div id="inline" style="display:none;text-align:center;">
+    <img src="https://thebeachfurniture.co.nz/newbeach-logo.png" alt="" id="logo">
+    <h3 style="margin-top:20px;">The Beach Furniture has changed its name to Urban & Beach Furniture</h3>
+    <p>But we will continue providing the same beautifully crafted character furniture</p>
+    <p><a href="javascript:;" onclick="jQuery.fancybox.close();" style="background-color:#333;padding:5px 10px;color:#fff;border-radius:5px;text-decoration:none;">Close</a></p>
+</div>
 <div id="wrapper">
 
 <!-- Header -->
@@ -1868,6 +1876,9 @@ var mc4wp_forms_config = [];
 <![endif]-->
 
 <script type="text/javascript" defer="" src="autoptimize_113a1c642dfcb2038481e935ab175cdd.js.download"></script>
+<script src="https://code.jquery.com/jquery-latest.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.0/jquery.cookie.js"></script>
 
 
 <!--
