--- a/index.html
+++ b/index.html
@@ -204,11 +204,34 @@
 <body class="home page-template page-template-page-templates page-template-template-onepage page-template-page-templatestemplate-onepage-php page page-id-29 wpb-js-composer js-comp-ver-5.4.5 vc_responsive icos-theme-ver-1.0 wordpress-version-4.9.5  no-touch loaded"
   data-spy="scroll" data-target="#mainnav" data-offset="80">
 <a id="popuplink" href="#inline" style="display:none;"></a>
-<div id="inline" style="display:none;text-align:center;">
+<div id="inline" style="display: none; text-align:center;background: #0D102A;">
     <img src="logo-white.png" alt="" id="logo">
-    <h3 style="margin-top:20px;">The Beach Furniture has changed its name to Urban & Beach Furniture</h3>
-    <p>But we will continue providing the same beautifully crafted character furniture</p>
-    <p><a href="javascript:;" onclick="jQuery.fancybox.close();" style="background-color:#333;padding:5px 10px;color:#fff;border-radius:5px;text-decoration:none;">Close</a></p>
+    <h2>Early Supporters Program is now LIVE</h2>
+    <p style="color: #fff;">Join AceD Early supporters program to get early access to Masternodes and Wallets. The raised funds are to be spent on Team Building, Platform Maintenance, Marketing, and Development. Please join our <a href="https://discord.gg/bW7sYBg">Discord</a> and contact @MaGe--AceD#9956 for sales inquiries.</p>
+    <div class="wpb_wrapper">
+        <div class="row" style="text-align: left;">
+            <div class="col-sm-6">
+                    <h6>Start:  <span> May 16th 2018</span></h6>
+            </div>
+            <div class="col-sm-6">
+                    <h6>Number of Coins for Sale: <span> 500,000 (ACED)</span></h6>
+            </div>
+            <div class="col-sm-6">
+                    <h6>End: <span> May 23 2018</span></h6>
+            </div>
+            <div class="col-sm-6">
+                    <h6>Coin Price: <span> 0.75 USD</span></h6>
+            </div>
+            <div class="col-sm-6">
+                    <h6>Acceptable currencies: <span> BTC</span></h6>
+            </div>
+            <div class="col-sm-6">
+                    <h6>Minimal Transaction Amount: <span> $200</span></h6>
+            </div>
+        </div>
+
+    </div>
+    <a class="btn btn-alt btn-sm" href="https://discord.gg/yMTRTsj" target="_self">Buy Coins</a>
 </div>
 <div id="wrapper">
 
