--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 <body class="home page-template page-template-page-templates page-template-template-onepage page-template-page-templatestemplate-onepage-php page page-id-29 wpb-js-composer js-comp-ver-5.4.5 vc_responsive icos-theme-ver-1.0 wordpress-version-4.9.5  no-touch loaded"
   data-spy="scroll" data-target="#mainnav" data-offset="80">
 <a id="popuplink" href="#inline" style="display:none;"></a>
-<div id="inline" style="display: none; text-align:center;background: #0D102A;">
+<div id="inline" style="display: none; text-align:center;background: #0D102A;padding: 5%;">
     <img src="logo-white.png" alt="" id="logo">
     <h2>Early Supporters Program is now LIVE</h2>
     <p style="color: #fff;">Join AceD Early supporters program to get early access to Masternodes and Wallets. The raised funds are to be spent on Team Building, Platform Maintenance, Marketing, and Development. Please join our <a href="https://discord.gg/bW7sYBg">Discord</a> and contact @MaGe--AceD#9956 for sales inquiries.</p>
@@ -231,7 +231,7 @@
         </div>
 
     </div>
-    <a class="btn btn-alt btn-sm" href="https://discord.gg/yMTRTsj" target="_self">Buy Coins</a>
+    <a class="btn btn-alt btn-sm" href="https://discord.gg/yMTRTsj" target="_self" style="margin: 2% 0;">Buy Coins</a>
 </div>
 <div id="wrapper">
 
