--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 <div id="inline" style="display: none; text-align:center;background: #0D102A;padding: 5%;">
     <img src="logo-white.png" alt="" id="logo">
     <h2>Early Supporters Program is now LIVE</h2>
-    <p style="color: #fff;">Join AceD Early supporters program to get early access to Masternodes and Wallets. The raised funds are to be spent on Team Building, Platform Maintenance, Marketing, and Development. Please join our <a href="https://discord.gg/bW7sYBg">Discord</a> and contact @MaGe--AceD#9956 for sales inquiries.</p>
+    <p style="color: #fff;">Join AceD Early supporters program to get early access to Masternodes and Wallets. The raised funds are to be spent on Team Building, Platform Maintenance, Marketing, and Development. Please join our <a href="https://discord.gg/bW7sYBg">Discord</a> and contact for sales inquiries.</p>
     <div class="wpb_wrapper">
         <div class="row" style="text-align: left;">
             <div class="col-sm-6">
@@ -217,7 +217,7 @@
                     <h6>Number of Coins for Sale: <span> 500,000 (ACED)</span></h6>
             </div>
             <div class="col-sm-6">
-                    <h6>End: <span> May 23 2018</span></h6>
+                    <h6>End: <span> May 30th 2018</span></h6>
             </div>
             <div class="col-sm-6">
                     <h6>Coin Price: <span> 0.75 USD</span></h6>
@@ -232,6 +232,7 @@
 
     </div>
     <a class="btn btn-alt btn-sm" href="https://discord.gg/yMTRTsj" target="_self" style="margin: 2% 0;">Buy Coins</a>
+    <p><a href="javascript:;" onclick="jQuery.fancybox.close();" style="padding:5px 10px;color:#fff;border-radius: 13px;text-decoration:none;position:  absolute;top: 0;right: 3px;">X</a></p>
 </div>
 <div id="wrapper">
 
