--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
     </div>
     <a class="btn btn-alt btn-sm" href="https://discord.gg/yMTRTsj" target="_self" style="margin: 2% 0;">Buy Coins</a>
-    <p><a href="javascript:;" onclick="jQuery.fancybox.close();" style="padding:5px 10px;color:#fff;border-radius: 13px;text-decoration:none;position:  absolute;top: 0;right: 3px;">X</a></p>
+    <p><a href="javascript:;" onclick="jQuery.fancybox.close();" style="font-size: 29px;padding:5px 10px;color:#fff;border-radius: 13px;text-decoration:none;position:  absolute;top: 0;right: 3px;">X</a></p>
 </div>
 <div id="wrapper">
 
