--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 <div id="inline" style="display: none; text-align:center;background: #0D102A;padding: 5%;">
     <img src="logo-white.png" alt="" id="logo">
     <h2>Early Supporters Program is now LIVE</h2>
-    <p style="color: #fff;">Join AceD Early supporters program to get early access to Masternodes and Wallets. The raised funds are to be spent on Team Building, Platform Maintenance, Marketing, and Development. Please join our <a href="https://discord.gg/bW7sYBg">Discord</a> and contact for sales inquiries.</p>
+    <p style="color: #fff;">Join AceD Early supporters program to get early access to Masternodes and Wallets. The raised funds are to be spent on Team Building, Platform Maintenance, Marketing, and Development. Please join our <a href="https://discord.gg/bW7sYBg">Discord</a> and contact @MaGe-AceD#9956 for sales inquiries.</p>
     <div class="wpb_wrapper">
         <div class="row" style="text-align: left;">
             <div class="col-sm-6">
