--- a/index.html
+++ b/index.html
@@ -951,68 +951,8 @@
                         <div class="blog-list" style="text-align: center;">
                             <p>Want to create a AceD Masternode or join a Mining Pool? Check out the guides
                                 below.</p>
-                            <!--<div class="row">-->
-                            <!--<div class="col-lg-4 offset-lg-0 col-sm-8 offset-sm-2">-->
-                            <!--<div class="blog-item">-->
-                            <!--<div class="blog-photo">-->
-                            <!--<a href="http://wpdemo.oceanthemes.net/icos/the-intersection-where-blockchain-meets-energy-2/">-->
-                            <!--<img src="blog-thumb-a.jpg" alt="">-->
-                            <!--</a>-->
-                            <!--</div>-->
-                            <!--<div class="blog-texts">-->
-                            <!--<ul class="blog-meta">-->
-                            <!--<li>March 19, 2018</li>-->
-                            <!--<li><a href="http://wpdemo.oceanthemes.net/icos/category/blockchain/" rel="category tag">Blockchain</a></li>                        </ul>-->
-                            <!--<h5 class="blog-title">-->
-                            <!--<a href="http://wpdemo.oceanthemes.net/icos/the-intersection-where-blockchain-meets-energy-2/">The Intersection Where Blockchain Meets Energy</a>-->
-                            <!--</h5>-->
-                            <!--<p>Blockchain Meets Energy Surplus of electrical energy is sometimes ut perspiciatis unde omnis iste naat...</p>-->
-                            <!--</div>-->
-                            <!--</div>-->
-                            <!--</div>&lt;!&ndash; .col &ndash;&gt;-->
-                            <!--<div class="col-lg-4 offset-lg-0 col-sm-8 offset-sm-2">-->
-                            <!--<div class="blog-item">-->
-                            <!--<div class="blog-photo">-->
-                            <!--<a href="http://wpdemo.oceanthemes.net/icos/pros-cons-of-premined-cryptocurrencies/">-->
-                            <!--<img src="blog-thumb-b.jpg" alt="">-->
-                            <!--</a>-->
-                            <!--</div>-->
-                            <!--<div class="blog-texts">-->
-                            <!--<ul class="blog-meta">-->
-                            <!--<li>January 10, 2018</li>-->
-                            <!--<li><a href="http://wpdemo.oceanthemes.net/icos/category/cryptocurrency/" rel="category tag">Cryptocurrency</a></li>                        </ul>-->
-                            <!--<h5 class="blog-title">-->
-                            <!--<a href="http://wpdemo.oceanthemes.net/icos/pros-cons-of-premined-cryptocurrencies/">Pros &amp; Cons of Premined Cryptocurrencies</a>-->
-                            <!--</h5>-->
-                            <!--<p>Blockchain Meets Energy Surplus of electrical energy is sometimes ut perspiciatis unde omnis iste naat...</p>-->
-                            <!--</div>-->
-                            <!--</div>-->
-                            <!--</div>&lt;!&ndash; .col &ndash;&gt;-->
-                            <!--<div class="col-lg-4 offset-lg-0 col-sm-8 offset-sm-2">-->
-                            <!--<div class="blog-item">-->
-                            <!--<div class="blog-photo">-->
-                            <!--<a href="http://wpdemo.oceanthemes.net/icos/how-where-to-market-your-ico-startup/">-->
-                            <!--<img src="blog-thumb-c.jpg" alt="">-->
-                            <!--</a>-->
-                            <!--</div>-->
-                            <!--<div class="blog-texts">-->
-                            <!--<ul class="blog-meta">-->
-                            <!--<li>December 23, 2017</li>-->
-                            <!--<li><a href="http://wpdemo.oceanthemes.net/icos/category/technology/" rel="category tag">Technology</a></li>                        </ul>-->
-                            <!--<h5 class="blog-title">-->
-                            <!--<a href="http://wpdemo.oceanthemes.net/icos/how-where-to-market-your-ico-startup/">How &amp; Where To Market Your ICO Startup</a>-->
-                            <!--</h5>-->
-                            <!--<p>Blockchain Meets Energy Surplus of electrical energy is sometimes ut perspiciatis unde omnis iste naat...</p>-->
-                            <!--</div>-->
-                            <!--</div>-->
-                            <!--</div>&lt;!&ndash; .col &ndash;&gt;-->
-                            <!--</div>-->
+                            <img src="marsternode.jpg">
                         </div>
-                        <!--<div class="row text-center">-->
-                        <!--<div class="col-md-12">-->
-                        <!--<a class="btn btn-more" href="http://wpdemo.oceanthemes.net/icos/blog/" target="_self">READ ALL NEWS <em class="ti ti-angle-right"></em></a>        </div>-->
-                        <!--</div>-->
-
                     </div>
                 </div>
             </div>
