--- a/index.html
+++ b/index.html
@@ -951,7 +951,31 @@
                         <div class="blog-list" style="text-align: center;">
                             <p>Want to create a AceD Masternode or join a Mining Pool? Check out the guides
                                 below.</p>
-                            <img src="marsternode.jpg">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="vc_row wpb_row vc_inner vc_row-fluid vc_row-o-equal-height vc_row-o-content-middle vc_row-flex">
+                <div class="res-m-btm wpb_column vc_column_container vc_col-sm-6">
+                    <div class="vc_column-inner ">
+                        <div class="wpb_wrapper">
+                            <div class="wpb_single_image wpb_content_element vc_align_center">
+
+                                <figure class="wpb_wrapper vc_figure">
+                                    <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="900" height="675" src="marsternode.jpg" class="vc_single_image-img attachment-full" alt="" srcset="marsternode.jpg 900w, marsternode.jpg 300w, marsternode.jpg 768w" sizes="(max-width: 900px) 100vw, 900px"></div>
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="wpb_column vc_column_container vc_col-sm-5 vc_col-sm-offset-1">
+                    <div class="vc_column-inner ">
+                        <div class="wpb_wrapper">
+                            <div class="wpb_text_column wpb_content_element  text-block">
+                                <div class="wpb_wrapper">
+                                    <p style="text-align: center;">(Coming Soon)</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
