--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                                                         be spent on Team Building, Platform Maintenance, Marketing,
                                                         and Development. Please join our <a
                                                                 href="https://discord.gg/bW7sYBg">Discord</a> and
-                                                        contact @MaGe--AceD#9956 for sales inquiries.</p>
+                                                        contact @MaGe-AceD#9956 for sales inquiries.</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -1526,7 +1526,7 @@
                                                 <ul class="contact-info">
                                                     <!--<li><em class="fa fa-phone" aria-hidden="true">phone</em></li>-->
                                                     <li><em class="fa fa-envelope" aria-hidden="true">email</em>info@acedcoin.com</li>
-                                                    <li><em class="fa fa-paper-plane" aria-hidden="true">tele</em>Join us on Telegram</li>
+                                                    <li><a href="https://discord.gg/yMTRTsj" style="vertical-align: middle;"><img src="discord.png" style="margin:0 17px;"><span style="color: white;">Join us on Telegram</span></a></li>
                                                 </ul>
 
                                             </div>
