--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
                                             <div class="col-sm-6">
                                                 <div class="event-single-info">
                                                     <h6>End</h6>
-                                                    <p>May 23 2018</p>
+                                                    <p>May 30 2018</p>
                                                 </div>
                                             </div>
                                             <div class="col-sm-6">
@@ -1526,7 +1526,7 @@
                                                 <ul class="contact-info">
                                                     <!--<li><em class="fa fa-phone" aria-hidden="true">phone</em></li>-->
                                                     <li><em class="fa fa-envelope" aria-hidden="true">email</em>info@acedcoin.com</li>
-                                                    <li><a href="https://discord.gg/yMTRTsj" style="vertical-align: middle;"><img src="discord.png" style="margin:0 17px;"><span style="color: white;">Join us on Telegram</span></a></li>
+                                                    <li><a href="https://discord.gg/yMTRTsj" style="vertical-align: middle;"><img src="discord.png" style="margin:0 17px;"><span style="color: white;">Join us on discord</span></a></li>
                                                 </ul>
 
                                             </div>
